// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-d3d8f8dd-0 cbhGLu"
  >
    <div
      class="sc-460918ac-0 cwmxlV"
    >
      <input
        class="hasData"
        type="text"
        value="derp"
      />
      <label
        class="sc-f769c06f-0 fdTyWu"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 eSGmlb"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-d3d8f8dd-0 cbhGLu"
  >
    <div
      class="sc-460918ac-0 cwmxlV"
    >
      <input
        class="noData"
        type="text"
        value=""
      />
      <label
        class="sc-f769c06f-0 fdTyWu"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 eSGmlb"
    />
  </div>
</div>
`;
